--- a/web/src/index.css
+++ b/web/src/index.css
@@ -66,3 +66,33 @@ button:focus {
         width: 10px;
     }
 }
+
+.tooltip {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+}
+
+.tooltip .tooltipText {
+    visibility: hidden;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    border-radius: 5px;
+    padding: 4px;
+    position: absolute;
+    z-index: 1;
+    bottom: 125%;
+    left: 50%;
+    margin-left: -60px;
+    opacity: 0;
+    transition: opacity 0.2s;
+    font-size: 12px;
+    max-lines: 2;
+    white-space: pre-line;
+}
+
+.tooltip:hover .tooltipText {
+    visibility: visible;
+    opacity: 0.72;
+}
