--- a/web/src/index.css
+++ b/web/src/index.css
@@ -100,3 +100,7 @@ button:focus {
 .select {
     user-select: text !important;
 }
+
+input[type=text] {
+    background-color: rgba(0, 0, 0, 0);
+}
