--- a/web/src/index.css
+++ b/web/src/index.css
@@ -114,3 +114,8 @@ button:focus {
 input[type=text] {
     background-color: rgba(0, 0, 0, 0);
 }
+
+p {
+    overflow-wrap: break-word;
+    word-break: break-all;
+}
